// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The grid component should assigns dimensions based on gridItem 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 1fr 2fr;
  grid-template-columns: 3fr 4fr;
}

.c2 {
  grid-row-start: 1;
  grid-row-end: 3;
  grid-column-start: 1;
  grid-column-end: 3;
  position: relative;
}

.c1 {
  grid-row-start: 1;
  grid-row-end: 2;
  grid-column-start: 1;
  grid-column-end: 3;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      item="B"
      style={
        Object {
          "position": "absolute",
        }
      }
    />
  </div>
  <div
    className="c2"
  >
    <div
      item="A"
      style={
        Object {
          "position": "absolute",
        }
      }
    />
  </div>
</div>
`;

exports[`The grid component should assigns dimensions based on sorting 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 1fr 2fr;
  grid-template-columns: 3fr 4fr;
}

.c1 {
  grid-row-start: 1;
  grid-row-end: 3;
  grid-column-start: 1;
  grid-column-end: 3;
  position: relative;
}

.c2 {
  grid-row-start: 1;
  grid-row-end: 2;
  grid-column-start: 1;
  grid-column-end: 3;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "position": "absolute",
        }
      }
    />
  </div>
  <div
    className="c2"
  >
    <div
      style={
        Object {
          "position": "absolute",
        }
      }
    />
  </div>
</div>
`;
